# google_doc_utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.beads/: issues.jsonl
.claude/: settings.json
.github/environments/: README.md
.github/workflows/: tier-a-tests.yml  tier-b-tests.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
docs/: architecture.md  google-docs-fonts.md
docs/test-reports/: T121-quickstart-test.md  T122-bootstrap-oauth-test.md  T123-workflow-validation.md  T124-performance-validation.md  T125-security-audit.md  T128-final-validation.md
scripts/: bootstrap_oauth.py  cleanup_test_resources.py
spec/: Proposed Rough Draft PRD Extended Google Doc MCP Server.md  md-extensions-spec.md
specs/001-cloud-testing-oauth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cloud-testing-oauth/checklists/: requirements.md
specs/001-cloud-testing-oauth/contracts/: README.md  credential_manager_protocol.py  google_api_client_protocol.py  (+3 more)
specs/002-mcp-discoverability-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/126-gdoc-markdown-converter/: Deep Research- Google Docs API Questions.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/127-gdoc-mcp-server/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/128-gdoc-font-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/130-document-style-transfer/: data-model.md  future-ideas.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/extended_google_doc_utils/: __init__.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  google_docs_responses.json  google_drive_responses.json
tests/integration/: test_harness_e2e.py
tests/mcp/: __init__.py  conftest.py  test_e2e.py  test_formatting_tools.py  test_inspector.py  test_navigation_tools.py  test_section_tools.py  test_server.py  test_style_tools.py  test_tab_tools.py
tests/tier_a/: README.md  test_auth_logic.py  test_config_loading.py  test_credential_loading.py  test_docs_client.py  test_docs_parsing.py  test_font_catalog.py  test_gdoc_to_mebdf.py  test_hierarchy.py  test_mebdf_parser.py  test_mebdf_serializer.py  test_mebdf_to_gdoc.py  test_preflight_logic.py  test_round_trip.py  test_section_export.py  test_section_import.py  test_style_reader.py  test_style_writer.py
tests/tier_b/: README.md  test_converter_e2e.py  test_oauth_flow.py  test_preflight_check.py  test_proof_of_concept.py  test_resource_isolation.py  test_style_transfer.py
tests/unit/: test_loader.py  test_mock.py  test_reporter.py  test_scorer.py
(+59 files in other folders)
